[package]
name = "playground_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
lunalang = {path = "../lunalang"}
serde = { version = "1", features = ["derive"] }
syn = "2.0.28"
